# buzzer

./: Cargo.toml  Dockerfile  README.md  buzz.html  fly.toml
.github/workflows/: fly.yml
docs/: buzzer-diagrams.drawio
src/: main.rs  main_old.rs  telemetry.rs
staging_media/: FFXIV ARR Party Sound Effects [EPhAS5sTXeY].m4a
