[package]
name = "buzzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5", features = ["ws"] }
tokio = { version = "1.21", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = {version = "0.3.4", features = ["cors", "trace"]}
futures = "0.3"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# tracing/telemetry
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"]}
opentelemetry = { version = "0.18.0", features = ["trace","rt-tokio"]}
opentelemetry-otlp = {version = "0.11.0", features = ["http-proto"] }
tracing-opentelemetry = "0.18.0"
tonic = "0.8.2"
url = "2.3.1"